--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
         "schema": "./prisma/schema"
     },
     "scripts": {
-        "dev": "ts-node-dev --respawn --transpile-only ./src/server.ts"
+        "dev": "tsx watch ./src/server.ts"
     },
     "dependencies": {
         "@prisma/client": "^7.3.0",
+        "bcryptjs": "^3.0.3",
         "cors": "^2.8.5",
         "dotenv": "^17.2.2",
         "express": "^5.1.0",
@@ -24,6 +25,7 @@
         "@types/node": "^24.5.0",
         "prisma": "^7.3.0",
         "ts-node-dev": "^2.0.0",
+        "tsx": "^4.20.3",
         "typescript": "^5.9.2"
     }
 }
