--- a/package.json
+++ b/package.json
@@ -9,20 +9,31 @@
         "schema": "./prisma/schema"
     },
     "scripts": {
-        "dev": "tsx watch ./src/server.ts"
+        "dev": "tsx watch ./src/server.ts",
+        "prisma:generate": "prisma generate",
+        "postinstall": "prisma generate"
     },
     "dependencies": {
+        "@prisma/adapter-pg": "^7.3.0",
         "@prisma/client": "^7.3.0",
+        "@types/multer": "^2.0.0",
         "bcryptjs": "^3.0.3",
+        "cloudinary": "^2.9.0",
         "cors": "^2.8.5",
         "dotenv": "^17.2.2",
         "express": "^5.1.0",
-        "http-status": "^2.1.0"
+        "http-status": "^2.1.0",
+        "jsonwebtoken": "^9.0.3",
+        "multer": "^2.0.2",
+        "pg": "^8.17.2",
+        "zod": "^4.3.6"
     },
     "devDependencies": {
         "@types/cors": "^2.8.19",
         "@types/express": "^5.0.3",
+        "@types/jsonwebtoken": "^9.0.10",
         "@types/node": "^24.5.0",
+        "@types/pg": "^8.16.0",
         "prisma": "^7.3.0",
         "ts-node-dev": "^2.0.0",
         "tsx": "^4.20.3",
