--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@types/multer": "^2.0.0",
         "bcryptjs": "^3.0.3",
         "cloudinary": "^2.9.0",
+        "cookie-parser": "^1.4.7",
         "cors": "^2.8.5",
         "dotenv": "^17.2.2",
         "express": "^5.1.0",
@@ -29,6 +30,7 @@
         "zod": "^4.3.6"
     },
     "devDependencies": {
+        "@types/cookie-parser": "^1.4.10",
         "@types/cors": "^2.8.19",
         "@types/express": "^5.0.3",
         "@types/jsonwebtoken": "^9.0.10",
