--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "http-status": "^2.1.0",
         "jsonwebtoken": "^9.0.3",
         "multer": "^2.0.2",
+        "openai": "^6.16.0",
         "pg": "^8.17.2",
         "zod": "^4.3.6"
     },
