env-example updated

--- a/.env.example
+++ b/.env.example
@@ -9,9 +9,9 @@ DATABASE_URL=YOUR_REMOTE_DATABASE_URL
 
 SALT_ROUND=10 
 
-JWT_SECRET=asdfasdfasdf 
+JWT_SECRET= 
 
-REFRESH_TOKEN_SECRET=asdfasdfasdf 
+REFRESH_TOKEN_SECRET= 
 
 EXPIRES_IN=7d 
 
