readme file added

--- a/.env.example
+++ b/.env.example
@@ -23,21 +23,21 @@ APP_PASS=YOUR_GMAIL_APP_PASSWORD
 
 RESET_PASS_LINK=http://localhost:3000/reset-password 
 
-RESET_PASS_TOKEN=asdfasdfasdf 
+RESET_PASS_TOKEN= 
 
 RESET_PASS_TOKEN_EXPIRES_IN=5m 
 
-CLOUDINARY_CLOUD_NAME=rfeslbgsrrgerg
+CLOUDINARY_CLOUD_NAME=
 
-CLOUDINARY_API_KEY=563456745655478
-CLOUDINARY_API_SECRET=frgsthsryjsrthetjhste
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
 
 # stripe key
-STRIPE_SECRET_KEY=sk_test_sdrn4rng;q3o483qhyp4983q432o92q043gyq2h45yhg
+STRIPE_SECRET_KEY=
 
 # opendriver key
-OPENROUTER_API_KEY =sk-or-v1-339743ertesrter502974af5
+OPENROUTER_API_KEY =
 
-STRIPE_WEBHOOK_SECRET=whsec_gejr5wblgvk34qa234q382a5a7
+STRIPE_WEBHOOK_SECRET=
 
 FRONTEND_URL=http://localhost:3000
