--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,11 @@
 NODE_ENV=development 
 
+# Enables deterministic verifier hooks (used by scripts/api-verify.mjs)
+ENABLE_TEST_ENDPOINTS=0
+
+# Disable global API rate limiting (useful for local verification / CI)
+DISABLE_RATE_LIMIT=0
+
 RATE_LIMIT_WINDOW_MS=900000
 RATE_LIMIT_MAX_REQUESTS=100
 
