--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "license": "MIT",
     "scripts": {
         "dev": "ts-node-dev --respawn --transpile-only ./src/server.ts",
+        "api:verify": "node ./scripts/api-verify.mjs",
         "db:generate": "prisma generate --schema=./prisma/schema",
         "db:migrate": "prisma migrate --schema=./prisma/schema",
         "db:push": "prisma db push --schema=./prisma/schema",
