--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "main": "index.js",
     "license": "MIT",
     "scripts": {
+        "predev": "prisma generate --schema=./prisma/schema",
         "dev": "ts-node-dev --respawn --transpile-only ./src/server.ts",
         "api:verify": "node ./scripts/api-verify.mjs",
         "db:generate": "prisma generate --schema=./prisma/schema",
