fix pnpm lockfile for vercel

--- a/.env.example
+++ b/.env.example
@@ -47,3 +47,6 @@ OPENROUTER_API_KEY =
 STRIPE_WEBHOOK_SECRET=
 
 FRONTEND_URL=http://localhost:3000
+
+# Swagger server URL shown in /docs (Try it out). Leave empty to use the same origin.
+SWAGGER_SERVER_URL=
