--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "scripts": {
         "predev": "prisma generate --schema=./prisma/schema",
         "dev": "ts-node-dev --respawn --transpile-only ./src/server.ts",
+        "build": "prisma generate --schema=./prisma/schema && tsc -p tsconfig.json",
+        "start": "node dist/server.js",
         "api:verify": "node ./scripts/api-verify.mjs",
         "db:generate": "prisma generate --schema=./prisma/schema",
         "db:migrate": "prisma migrate --schema=./prisma/schema",
