--- a/.env.example
+++ b/.env.example
@@ -46,7 +46,15 @@ OPENROUTER_API_KEY =
 
 STRIPE_WEBHOOK_SECRET=
 
+## CORS allowed origins
+# Comma-separated list of allowed frontend origins.
+# Local dev:
 FRONTEND_URL=http://localhost:3000
+# Production example (your deployed frontend):
+# FRONTEND_URL=https://health-care-client-rust.vercel.app
 
 # Swagger server URL shown in /docs (Try it out). Leave empty to use the same origin.
 SWAGGER_SERVER_URL=
+
+# Production example (your deployed backend):
+# SWAGGER_SERVER_URL=https://health-care-server-gamma.vercel.app
