--- a/tsconfig.json
+++ b/tsconfig.json
@@ -108,5 +108,11 @@
         // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
         "skipLibCheck": true /* Skip type checking all .d.ts files. */
     },
-    "exclude": ["node_modules", "dist", "Old_Backend_Done", "prisma.config.ts"]
+    "exclude": [
+        "node_modules",
+        "dist",
+        "Old_Backend_Done",
+        "prisma.config.ts",
+        "scripts"
+    ]
 }
