--- a/.env.example
+++ b/.env.example
@@ -27,7 +27,7 @@ EMAIL=YOUR_GMAIL_FOR_EMAIL
 
 APP_PASS=YOUR_GMAIL_APP_PASSWORD
 
-RESET_PASS_LINK=http://localhost:3000/reset-password 
+RESET_PASS_LINK=https://health-care-client-rust.vercel.app/reset-password
 
 RESET_PASS_TOKEN= 
 
@@ -42,16 +42,15 @@ CLOUDINARY_API_SECRET=
 STRIPE_SECRET_KEY=
 
 # opendriver key
-OPENROUTER_API_KEY =
+OPENROUTER_API_KEY=
 
 STRIPE_WEBHOOK_SECRET=
 
 ## CORS allowed origins
 # Comma-separated list of allowed frontend origins.
-# Local dev:
-FRONTEND_URL=http://localhost:3000
-# Production example (your deployed frontend):
-# FRONTEND_URL=https://health-care-client-rust.vercel.app
+# Client origin (used for Stripe success/cancel redirects and CORS allowlist)
+# IMPORTANT: Set this to the FRONTEND origin (do not include paths like /docs-json)
+FRONTEND_URL=https://health-care-client-rust.vercel.app
 
 # Swagger server URL shown in /docs (Try it out). Leave empty to use the same origin.
 SWAGGER_SERVER_URL=
